2005-08-01  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_vlog): Use _stp_pid instead os _stp_tport->pid.
	* print.c (_stp_print_flush): Don't need _stp_tport.
	*runtime.h (probe_start): Just call _stp_transport_init().
	(probe_exit): Just call _stp_transport_close().
	
2005-07-28  Graydon Hoare  <graydon@redhat.com>

	* loc2c-runtime.h: New file from elfutils CVS.

2005-07-20  Martin Hunt  <hunt@redhat.com>

	* io.c (_stp_vlog): Don't count transport failures for 
	these messages.

2005-07-19  Martin Hunt  <hunt@redhat.com>

	* print.c (_stp_print_flush): Check return value and increment
	transport failures.

2005-07-14  Frank Ch. Eigler  <fche@redhat.com>

	* builtin_functions.h (printk): Use explicit format string.

2005-07-11  Graydon Hoare  <graydon@redhat.com>

	* builtin_functions.h: New file.

2005-07-10  Martin Hunt  <hunt@redhat.com>

	* runtime.h (init_module): Fix return value.

2005-07-08  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Move some common pieces of modules into this file.
	Includes MODULE_LICENSE, cleanup_module and init_module.

	* print.c (_stp_print_flush): Rename "t" to "_stp_tport".

	* io.c (_stp_vlog): Ditto.

2005-07-01  Martin Hunt  <hunt@redhat.com>

	* string.c (_stp_string_init): CAll stp_error() on bad
	init.

	* list.c (_stp_list_clear): Call _stp_warn().

	* probes.c: Convert all _stp_log() calls to either stp_warn() or
	dbug().
	
	* print.c: Comment out dbug()s.	

	* stat-common.c: Comment out dbug()s.		
	
	* map.c (_stp_map_new): Call _stp_error() on a bad map type.
	Comment out dbug()s.

	* map-stat.c (_stp_map_new_hstat_log): Call _stp_warn().
	(_stp_map_new_hstat_linear): Ditto.

	* map-int.c: Comment out dbug()s.

	* map-str.c: Comment out dbug()s.
	
	* map-keys.c: Use _stp_warn().  Comment out dbug()s.
	
	* alloc.c (_stp_alloc): Call _stp_error().
	(_stp_valloc): Ditto.

	* io.c (_stp_warn): New function.
	(_stp_exit): New function.
	(_stp_error): New function.
	(_stp_dbug): New function.
