@@ -1,3 +1,9 @@
+2005-08-03  Tom Zanussi  <trz@us.ibm.com>
+
+	* io.c (_stp_vlog): Remove call to _stp_print_flush().
+	* print.c (_stp_print_flush): _stp_warn() on first
+	transport failure.
+
 2005-08-01  Martin Hunt  <hunt@redhat.com>
 
 	* io.c (_stp_vlog): Use _stp_pid instead os _stp_tport->pid.
